--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,5 +3,7 @@ inherit_from: .rubocop_todo.yml
 require: rubocop-rails
 Style/FrozenStringLiteralComment:
   Enabled: false
+Style/ClassAndModuleChildren:
+  Enabled: false
 Documentation:
   Enabled: false
